<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_circle_title" />

        <ImageView
            android:id="@+id/iv_round_origin"
            android:layout_width="240dp"
            android:layout_height="240dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView2"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_combine_img" />

        <ImageView
            android:id="@+id/iv_round_combine"
            android:layout_width="240dp"
            android:layout_height="240dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:text="@string/str_gaosimohu"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/radius_small"
                android:text="@string/str_radius_low"
                android:layout_weight="1"
                android:onClick="radiusSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/radius_big"
                android:text="@string/str_radius_high"
                android:layout_weight="1"
                android:onClick="radiusBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_blur"
            android:src="@mipmap/sea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</ScrollView>
